plugins {
    id 'java'
    id 'java-library'
    id 'jacoco'
}

repositories {
    mavenCentral()
    jcenter()
}

sourceCompatibility = JavaVersion.VERSION_14
targetCompatibility = JavaVersion.VERSION_14

compileJava {
    options.compilerArgs += ["--enable-preview"]
}

compileTestJava {
    options.compilerArgs += ["--enable-preview"]
}
dependencies {
    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    testImplementation "org.junit.jupiter:junit-jupiter-params:5.7.0"
}

test {
    jvmArgs(['--enable-preview'])
    useJUnitPlatform()
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}
